--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "antd": "^4.9.3",
+    "autoprefixer": "^10.1.0",
     "next": "10.0.3",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2"
   }
 }
