--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "antd": "^4.9.3",
     "autoprefixer": "^10.1.0",
+    "classnames": "^2.2.6",
+    "gray-matter": "^4.0.2",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "tailwindcss": "^2.0.2"
   }
 }
